--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,31 @@
+body {
+    background-color: aliceblue;
+}
 .image {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    border-radius: 25%;
+}
+/* .image:hover{
+    color: powderblue;
+    transition: background-color .5s;
+} */
+div{
+    font-size: 20px;
+    border-bottom: 5px solid black;
+    padding: 15px;
+}
+    
+a {
+    text-decoration: none;
+    color: blue;
+}
+a:hover{
+    color: lightcoral;
+    font-style: italic;
+    font-size: 25px;
+}
+div #text {
+    padding-bottom: 50px;
 }
